Change the green line + transparent images

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,9 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:tag="0"
+                android:background="@android:color/transparent"
                 tools:srcCompat="@tools:sample/avatars" />
+
 
             <ImageButton
                 android:id="@+id/mainActivityBtn1"
@@ -76,6 +78,8 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:tag="1"
+                android:background="@android:color/transparent"
+
                 tools:srcCompat="@tools:sample/avatars" />
 
             <ImageButton
@@ -85,6 +89,7 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:tag="2"
+                android:background="@android:color/transparent"
                 tools:srcCompat="@tools:sample/avatars" />
 
         </LinearLayout>
@@ -102,6 +107,7 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:tag="3"
+                android:background="@android:color/transparent"
                 tools:srcCompat="@tools:sample/avatars" />
 
 
@@ -112,6 +118,7 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:tag="4"
+                android:background="@android:color/transparent"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <ImageButton
@@ -121,6 +128,7 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:tag="5"
+                android:background="@android:color/transparent"
                 tools:srcCompat="@tools:sample/avatars" />
 
         </LinearLayout>
@@ -138,6 +146,7 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:tag="6"
+                android:background="@android:color/transparent"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <ImageButton
@@ -147,6 +156,7 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:tag="7"
+                android:background="@android:color/transparent"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <ImageButton
@@ -156,6 +166,7 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:tag="8"
+                android:background="@android:color/transparent"
                 tools:srcCompat="@tools:sample/avatars" />
 
         </LinearLayout>
